# clahe-filter

./: config.json  main.py  pyproject.toml
src/: index.html  main.py
