[project]
name = "image-enhancement-tool"
version = "0.1.0"
description = "Real-time histogram equalization and CLAHE enhancement for images and video frames in Supervisely"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "supervisely>=6.73.130",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0,<=10.2.0",
    "setuptools",
]
